# Assignment

./: README.md  assessment_pt1.ipynb  baseline_runs.py  mltester.py  my_runs.py  predicting_the_stock_market.ipynb  pyproject.toml  test.py
Notebook Resources/: requirements.txt
data/: prices.csv  prices.parquet
outputs/: mltester_GLD.csv  mltester_TLT.csv  mltester_XLP.csv  mltester_XLU.csv  mltester_XLV.csv  mltester_summary.csv
