[project]
name = "assignment"
version = "0.1.0"
description = "ML Assignment 1: Stock Market Prediction"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastparquet>=2024.11.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "ta-lib>=0.6.7",
    "yfinance>=0.2.66",
]
